Add classes for Todo, Note, Project. - created classes for objects and DOM manipulation - created sticky note and function to display it - created mini-form to test event listener and todo creation

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,14 @@
     <title>TO-DO APP</title>
 </head>
 <body>
-    
+    <div>
+        <form action="" id="add-todo">
+            <label for="title">Title<input type="text" name="title" id="title" required></label>
+            <label for="due-date">Due date<input type="date" name="due-date" id="due-date"></label>
+            <button>Add</button>
+        </form>
+    </div>
+    <ul>
+    </ul>
 </body>
 </html>
