--- a/src/template.html
+++ b/src/template.html
@@ -6,10 +6,26 @@
     <title>TO-DO APP</title>
 </head>
 <body>
+    <div class="grid-container">
+        <div class="top">RAZ</div>
+        <div class="side">DWA</div>
+        <div class="main">TRZY</div>
+    </div>
     <div>
         <form action="" id="add-todo">
             <label for="title">Title<input type="text" name="title" id="title" required></label>
             <label for="due-date">Due date<input type="date" name="due-date" id="due-date"></label>
+            <label for="description"><textarea name="description" id="description"></textarea></label>
+            <fieldset>
+                <legend>Priority</legend>
+                <label for="high">High<input type="radio" name="priority" id="high" value="high"></label>
+                <label for="normal">Normal<input type="radio" name="priority" id="normal" value="normal" checked></label>
+                <label for="low">Low<input type="radio" name="priority" id="low" value="low"></label>
+            </fieldset>
+            <fieldset id="projects">
+                <legend>Project</legend>
+
+            </fieldset>
             <button>Add</button>
         </form>
     </div>
