Add option to make select list with projects.

--- a/src/template.html
+++ b/src/template.html
@@ -22,9 +22,10 @@
                 <label for="normal">Normal<input type="radio" name="priority" id="normal" value="normal" checked></label>
                 <label for="low">Low<input type="radio" name="priority" id="low" value="low"></label>
             </fieldset>
-            <fieldset id="projects">
+            <fieldset>
                 <legend>Project</legend>
-
+                <select name="projects" id="projects">
+                </select>
             </fieldset>
             <button>Add</button>
         </form>
