Create option for adding and displaying new TODO.

--- a/src/template.html
+++ b/src/template.html
@@ -9,7 +9,19 @@
     <div class="grid-container">
         <div class="top">RAZ</div>
         <div class="side">DWA</div>
-        <div class="main">TRZY</div>
+        <div class="todo-list main">TRZY
+                <div class="todo-normal">
+                    <a href="#">
+                        <div class="basic-info">
+                            <div>nakarmić koty</div>
+                            <div><strong>due date:</strong>20.08.2024</div>
+                        </div>
+                    </a>
+                    <div class="more-info" hidden>
+                        <p>koty trzeba nakarmić rano o 7 oraz wieczorem o 21, czasami trzeba im również dać coś po południu</p>
+                    </div>
+                </div>
+        </div>
     </div>
     <div>
         <form action="" id="add-todo">
