Add working version of localStorage.

--- a/src/template.html
+++ b/src/template.html
@@ -27,7 +27,7 @@
                         <select name="projects" id="projects">
                         </select>
                     </fieldset>
-                    <button>Add</button>
+                    <button type="submit">Add</button>
                 </form>
             </div>
         </div>
@@ -38,21 +38,9 @@
                 <li><a href="#">This week</a></li>
                 <li><a href="#">This month</a></li>
             </ul>
+            <a href="#" id="notes">Notes</a>
         </div>
-        <div class="todo-list main">TRZY
-                <div class="todo-normal">
-                    <div><input type="checkbox"></div>
-                    <a href="#">
-                        <div class="basic-info">
-                            <div>nakarmić koty</div>
-                            <div><strong>due date:</strong>20.08.2024</div>
-                        </div>
-                    </a>
-                    <div class="more-info" hidden>
-                        <p>koty trzeba nakarmić rano o 7 oraz wieczorem o 21, czasami trzeba im również dać coś po południu</p>
-                        <button class="del-todo">usun</button>
-                    </div>
-                </div>
+        <div class="todo-list main">
         </div>
     </div>
     <div>
