--- a/src/template.html
+++ b/src/template.html
@@ -14,7 +14,7 @@
                 <div class="close-btn">&times;</div>
                 <form action="" id="add-todo">
                     <label for="title">Title<input type="text" name="title" id="title" required></label>
-                    <label for="due-date">Due date<input type="date" name="due-date" id="due-date"></label>
+                    <label for="due-date">Due date<input type="date" name="due-date" id="due-date" required></label>
                     <label for="description"><textarea name="description" id="description"></textarea></label>
                     <fieldset>
                         <legend>Priority</legend>
