Add option to edit due date, project and priority.

--- a/src/template.html
+++ b/src/template.html
@@ -31,14 +31,16 @@
                 </form>
             </div>
         </div>
-        <div class="side">DWA
+        <div class="sidebar">
             <ul>
                 <li><a href="#">All todos</a></li>
                 <li><a href="#">Today</a></li>
                 <li><a href="#">This week</a></li>
                 <li><a href="#">This month</a></li>
             </ul>
-            <a href="#" id="notes">Notes</a>
+            <ul>
+                <li><a href="#" id="notes">Notes</a></li>
+            </ul>
         </div>
         <div class="todo-list main">
         </div>
