Add option to show todos from today.

--- a/src/template.html
+++ b/src/template.html
@@ -33,14 +33,15 @@
         </div>
         <div class="sidebar">
             <ul>
-                <li><a href="#">All todos</a></li>
-                <li><a href="#">Today</a></li>
-                <li><a href="#">This week</a></li>
-                <li><a href="#">This month</a></li>
+                <li><a href="#" id="all-todos">ALL TODOS</a></li>
+                <li><a href="#" id="today-todos">TODAY</a></li>
+                <li><a href="#" id="week-todos">THIS WEEK</a></li>
+                <li><a href="#" id="month-todos">THIS MONTH</a></li>
             </ul>
             <ul>
-                <li><a href="#" id="notes">Notes</a></li>
+                <li><a href="#" id="notes">NOTES</a></li>
             </ul>
+            <ul id="projects-list"></ul>
         </div>
         <div class="todo-list main">
         </div>
