Add option to show todos for this week or month.

--- a/src/template.html
+++ b/src/template.html
@@ -38,10 +38,12 @@
                 <li><a href="#" id="week-todos">THIS WEEK</a></li>
                 <li><a href="#" id="month-todos">THIS MONTH</a></li>
             </ul>
-            <ul>
-                <li><a href="#" id="notes">NOTES</a></li>
+            <ul id="projects-list">
+                <li id="add-new-project"><a href="#">+ ADD NEW</a></li>
             </ul>
-            <ul id="projects-list"></ul>
+            <ul>
+                <li><a href="#" id="notes">STICKY NOTES</a></li>
+            </ul>
         </div>
         <div class="todo-list main">
 
