--- a/src/template.html
+++ b/src/template.html
@@ -44,6 +44,9 @@
             <ul>
                 <li><a href="#" id="notes">STICKY NOTES</a></li>
             </ul>
+            <ul>
+                <li><a href="#" id="example-data">SHOW EXAMPLE</a></li>
+            </ul>
         </div>
         <div class="todo-list main">
 
