Improve sticky notes. - added some styling - improved option to adding and removing notes - added local storage for notes - created option to edit note

--- a/src/template.html
+++ b/src/template.html
@@ -36,7 +36,7 @@
                 <div class="close-btn">&times;</div>
                 <form action="" id="add-note">
                     <label for="title">Title<input type="text" name="title" id="title" required></label>
-                    <label for="description"><textarea name="description" id="description"></textarea></label>
+                    <label for="text"><textarea name="text" id="text"></textarea></label>
                     <button type="submit">Add</button>
                 </form>
             </div>
@@ -59,8 +59,8 @@
                 <li><a href="#" id="example-data">SHOW EXAMPLE</a></li>
             </ul>
         </div>
-        <div class="todo-list main note-list">
-
+        <div class="todo-list main">
+            <div class="note-list"></div>
         </div>
     </div>
     <div>
