Add option to remove project.

--- a/src/template.html
+++ b/src/template.html
@@ -52,6 +52,8 @@
             <ul id="projects-list">
                 <li id="add-new-project"><a href="#">+ ADD NEW</a></li>
             </ul>
+            <input type="text" name="new-project-name" id="new-project-name" hidden>
+            <button id="new-project-button" hidden>Add Project</button>
             <ul>
                 <li><a href="#" id="notes">STICKY NOTES</a></li>
             </ul>
