--- a/src/template.html
+++ b/src/template.html
@@ -48,9 +48,10 @@
                 <li><a href="#" id="today-todos">TODAY</a></li>
                 <li><a href="#" id="week-todos">THIS WEEK</a></li>
                 <li><a href="#" id="month-todos">THIS MONTH</a></li>
+                <li><a href="#" id="completed-todos">COMPLETED</a></li>
             </ul>
             <ul id="projects-list">
-                <li id="add-new-project"><a href="#">+ ADD NEW</a></li>
+                <li id="add-new-project"><a href="">+ ADD NEW</a></li>
             </ul>
             <input type="text" name="new-project-name" id="new-project-name" hidden>
             <button id="new-project-button" hidden>Add Project</button>
