Fix sorting by date.

--- a/src/template.html
+++ b/src/template.html
@@ -44,25 +44,25 @@
         </div>
         <div class="sidebar">
             <ul>
-                <li><a href="#" id="all-todos">ALL TODOS</a></li>
-                <li><a href="#" id="today-todos">TODAY</a></li>
-                <li><a href="#" id="week-todos">THIS WEEK</a></li>
-                <li><a href="#" id="month-todos">THIS MONTH</a></li>
-                <li><a href="#" id="completed-todos">COMPLETED</a></li>
+                <li><a id="all-todos">ALL TODOS</a></li>
+                <li><a id="today-todos">TODAY</a></li>
+                <li><a id="week-todos">THIS WEEK</a></li>
+                <li><a id="month-todos">THIS MONTH</a></li>
+                <li><a id="completed-todos">COMPLETED</a></li>
             </ul>
             <ul id="projects-list">
-                <li id="add-new-project"><a href="">+ ADD NEW</a></li>
+                <li id="add-new-project"><a>+ ADD NEW</a></li>
             </ul>
             <input type="text" name="new-project-name" id="new-project-name" hidden>
             <button id="new-project-button" hidden>Add Project</button>
             <ul>
-                <li><a href="#" id="notes">STICKY NOTES</a></li>
+                <li><a id="notes">STICKY NOTES</a></li>
             </ul>
             <ul>
-                <li><a href="#" id="example-data">SHOW EXAMPLE</a></li>
+                <li><a id="example-data">SHOW EXAMPLE</a></li>
             </ul>
         </div>
-        <div class="todo-list main">
+        <div class="main todo-list">
         </div>
     </div>
     <div>
